--- a/routing_project/.gitignore
+++ b/routing_project/.gitignore
@@ -1,10 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/secondapp/node_modules
-/thirdapp/node_modules
-/todolist/node_modules
-/routing_project/node_modules
+/node_modules
 /.pnp
 .pnp.js
 
